Допили сваггер для работы с сессиями
