# docs/swagger.json
@@ -9,6 +9,56 @@
     "host": "92.51.45.202:8000",
     "basePath": "/",
     "paths": {
+        "/session": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sessions"
+                ],
+                "summary": "Получить пользователя по имени пользователя и паролю",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Имя пользователя",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Пароль",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SessionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/users/": {
             "get": {
                 "produces": [
@@ -69,6 +119,65 @@
                 }
             }
         },
+        "/users/caption/{id}": {
+            "post": {
+                "description": "Этот эндпоинт позволяет добавлять или обновлять описание пользователя.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Добавляет или обновляет описание пользователя.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID пользователя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Данные для обновления подписи",
+                        "name": "models.captionData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CaptionData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SuccessMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid JSON data",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to update user",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/users/login": {
             "get": {
                 "consumes": [
@@ -80,19 +189,12 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Получить пользователя по имени пользователя и паролю",
+                "summary": "Получить пользователя по id сессии",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Имя пользователя",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Пароль",
-                        "name": "password",
+                        "description": "id сессии",
+                        "name": "session",
                         "in": "query",
                         "required": true
                     }
@@ -258,10 +360,26 @@
         }
     },
     "definitions": {
+        "models.CaptionData": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ErrorMessage": {
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SessionResponse": {
+            "type": "object",
+            "properties": {
+                "session": {
                     "type": "string"
                 }
             }
