# models/caption.go
@@ -1,0 +1,5 @@
+package models
+
+type CaptionData struct {
+	Caption string `json:"caption"`
+}
